fixed css for new main page *align-items issue

--- a/Test Folder/test.css
+++ b/Test Folder/test.css
@@ -12,11 +12,12 @@
 body{
    display: flex;
    flex-direction: column;
-   align-items: center;
+   /* align-items: center; */
+
    width: 100vw;
-   margin: 0px;
-   color: black;
    background-color: var(--main_bg);
+   color: black;
+   margin: 0px;
 }
 
 /* Styles for the search box */
@@ -34,9 +35,14 @@ body{
     border-color: black;
 }
 
+/* styling for location marker */
+.fa-solid {
+    margin-left: 5px;
+}
+/* style for text input box for location search */
 #search-inputbox {
     margin-left: 5px;
-    width: 300px;
+    width: 250px;
 }
 
 /*  Styles location */
@@ -46,7 +52,8 @@ body{
     justify-content: center;
     align-items: center;
     height: 100px;
-    width: 500px;
+    width: 100vw;
+    margin-top: 10px;
     border: 2px solid;
     border-color: white;
 }
@@ -58,7 +65,9 @@ body{
     justify-content: center;
     align-items: center;
     height: 250px;
-    width: 200px;
+    width: 400px;
+
+    margin-top: 10px;
     border: 2px solid;
     border-color: white;
     flex-wrap: wrap;
@@ -72,34 +81,37 @@ body{
     align-items: center;
     height: 500px;
     width: 750px;
+
+    margin-top: 10px;
     border: 2px solid;
     border-color:white;
 }
 
 /*  Styles todays-hourlyforecast */
-.todays-hourlyforecast {
-    display: flex;
+.sevenday-forecast {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-template-rows: 1fr;
+    overflow-x: scroll;
+
     background-color: var(--bg1);
-    justify-content: center;
-    align-items: center;
     height: 220px;
-    width: 1150px;
+    width: 1000px;
+
+    margin-top: 10px;
     border: 1px solid;
     border-color: white;
-    flex-direction: row;
-}
-
-.day1 {
-    display: flex;
-    background-color: var(--bg1);
 }
 
 .hourly {
-    flex: 1;
-    height: 190px;
-    padding: 10px;
-    border: 1px solid;
-    border-color: white;
+    padding-left: 5px;
+    padding-top: 5px;
+    border-right: 1px solid;
+    border-color: black;
+}
+
+.hour12 {
+    border: none;
 }
 
 
@@ -111,6 +123,8 @@ body{
     align-items: center;
     height: 300px;
     width: 750px;
+
+    margin-top: 10px;
     border: 2px solid;
     border-color: white;
     flex-direction: row;
@@ -125,8 +139,6 @@ body{
     border: 1px solid white;
     border-top: none;
     border-bottom: none;
-
-
 }
 
 .government-alerts {
@@ -136,6 +148,8 @@ body{
     align-items: center;
     height: 500px;
     width: 750px;
+
+    margin-top: 10px;
     border: 2px solid;
     border-color:white;
 
@@ -146,6 +160,8 @@ footer {
     justify-content: center; 
     align-items: center;
     width: 100vw;
+
+    margin-top: 10px;
     border: 2px solid;
     border-color: white;
   }
